--- a/conf/zhongkui.conf
+++ b/conf/zhongkui.conf
@@ -19,7 +19,7 @@ attackLog_json_format = "off"
 logPath = "/usr/local/openresty/nginx/logs/hack/"
 
 # 开启ip地理位置识别
-geoip = "on"
+geoip = "off"
 # geoip数据文件路径
 geoip_db_file = "/usr/local/share/GeoIP/GeoLite2-City.mmdb"
 # 允许哪些国家的ip请求，其值为大写的ISO国家代码，如CN，如果设置为空值则允许所有
@@ -28,7 +28,7 @@ geoip_allow_country = []
 geoip_language = "zh-CN"
 
 # 开启ip白名单
-whiteIP = "on"
+whiteIP = "off"
 # ip白名单列表，支持网段配置，"127.0.0.1/24"或"127.0.0.1/255.255.255.0"
 ipWhiteList = ["127.0.0.1"]
 
@@ -38,9 +38,9 @@ blackIP = "on"
 ipBlackList = []
 
 # url白名单
-whiteURL = "on"
+whiteURL = "off"
 # url黑名单
-blackURL = "on"
+blackURL = "off"
 
 # http方法白名单
 methodWhiteList = ["GET","POST","HEAD"]
@@ -94,8 +94,6 @@ redis_timeouts = "1000,1000,1000"
 
 # 是否重定向
 redirect = "on"
-# 非法请求将重定向的html
-redirect_html = "/usr/local/openresty/zhongkui-waf/redirect.html"
 
 # 流量监控页面
 dashboard = "off"
